<resources>
    <string name="app_name">Boris_Jankovic_RN3317</string>
    <string name="login_screen_desc">Informacioni sistem za pracenje stanja pacijenata obolelih od Covid-19</string>
    <string name="first_name_hint_login">Unesite ime</string>
    <string name="last_name_hint_login">Unesite prezime</string>
    <string name="hospital_name_hint_login">Unesite ime bolnice u kojoj ste zaposleni</string>
    <string name="pin_hint_login">Unesite pin</string>
    <string name="sign_up_login">Prijava</string>
    <string name="first_name_error_login">Ime ne moze biti prazno</string>
    <string name="last_name_error_login">Prezime ne moze biti prazno</string>
    <string name="hospital_name_error_login">Ime bolnice ne moze biti prazno</string>
    <string name="symptoms_desc_error">Polje simptomi ne moze biti prazno</string>
    <string name="pin_error_len_login">Pin mora imati 4 cifre</string>
    <string name="pin_error_login">Pogresan pin</string>
    <string name="successful_login">Uspesno ste se prijavili</string>
    <string name="success_logout">Uspesno odjavljivanje</string>
    <string name="success_edit">Izmene su uspesno sacuvane</string>
    <string name="success_add_patient">Pacijent je uspesno dodat u cekaonicu</string>
    <string name="navigation_info">Stanje</string>
    <string name="navigation_input">Unos</string>
    <string name="navigation_list">Liste</string>
    <string name="navigation_profile">Profil</string>
    <string name="navigation_tab_waiting">Cekaonica</string>
    <string name="navigation_tab_hospitalized">Hospitalizovani</string>
    <string name="navigation_tab_discharged">Otpusteni</string>
    <string name="fragment_info_desc">Pregled brojnog stanja pacijenata</string>
    <string name="fragment_waiting_patients_desc">Broj pacijenata u cekaonici</string>
    <string name="fragment_hospitalized_patients_desc">Broj hospitalizovanih pacijenata</string>
    <string name="fragment_discharged_patients_desc">Broj otpustenih pacijenata</string>
    <string name="fragment_default_patients_number">0</string>
    <string name="fragment_input_patients_title">Unos novog pacijenta</string>
    <string name="first_name_hint_input_patients">Unesite ime</string>
    <string name="last_name_hint_input_patients">Unesite prezime</string>
    <string name="symptoms_hint_input_patients">Unesite simptome i opste stanje</string>
    <string name="fragment_input_patients_btn">Dodaj u cekaonicu</string>
    <string name="search_hint">Pretrazi po imenu ili prezimenu</string>
    <string name="layout_first_name">Ime</string>
    <string name="layout_last_name">Prezime</string>
    <string name="layout_symptoms">Lorem Ipsum is simply dummy text of the printing and typesetting industry.</string>
    <string name="layout_healthy_btn">Zdrav</string>
    <string name="layout_hospitalization_btn">Hospitalizacija</string>
    <string name="layout_file_btn">Karton</string>
    <string name="layout_discharged_btn">Otpust</string>
    <string name="layout_discharged_label">Otpusten:</string>
    <string name="layout_discharged_date">Datum</string>
    <string name="fragment_profile_title">Podaci o zdravstvenom radniku</string>
    <string name="fragment_profile_first_name_label">Ime:</string>
    <string name="fragment_profile_last_name_label">Prezime:</string>
    <string name="fragment_profile_hospital_label">Bolnica:</string>
    <string name="fragment_profile_hospital_name">Ime bolnice</string>
    <string name="fragment_profile_edit_btn">Izmeni</string>
    <string name="fragment_profile_signOut_btn">Odjava</string>
    <string name="fragment_profile_edit_cancel_btn">Odustani</string>
    <string name="activity_patient_file_desc">Karton pacijenta</string>
    <string name="activity_patient_state_on_admission">Stanje pri prijemu</string>
    <string name="activity_patient_current_state">Trenutno stanje</string>
    <string name="activity_patient_date_of_admission">Datum prijema</string>

</resources>
