<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/descTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iconIv"
        android:gravity="center"
        android:text="@string/fragment_profile_title"/>

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_gravity="center"
        app:layout_constraintTop_toBottomOf="@id/descTv"
        app:layout_constraintBottom_toTopOf="@id/firstNameLabelTv"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:tint="@color/iconGreen"
        android:src="@drawable/ic_profile_details"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/firstNameLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iconIv"
        app:layout_constraintBottom_toTopOf="@id/firstNameTv"
        android:text="@string/fragment_profile_first_name_label"/>

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/firstNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstNameLabelTv"
        app:layout_constraintBottom_toTopOf="@id/lastNameLabelTv"
        android:text="@string/layout_first_name"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/lastNameLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstNameTv"
        app:layout_constraintBottom_toTopOf="@id/lastNameTv"
        android:text="@string/fragment_profile_last_name_label"/>

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/lastNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastNameLabelTv"
        app:layout_constraintBottom_toTopOf="@id/hospitalLabelTv"
        android:text="@string/layout_last_name"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/hospitalLabelTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastNameTv"
        app:layout_constraintBottom_toTopOf="@id/hospitalNameTv"
        android:text="@string/fragment_profile_hospital_label"/>

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/hospitalNameTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hospitalLabelTv"
        app:layout_constraintBottom_toBottomOf="@id/editBtn"
        android:text="@string/fragment_profile_hospital_name"/>

    <Button
        android:id="@+id/editBtn"
        style="@style/ButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:text="@string/fragment_profile_edit_btn"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@id/signOutBtn"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/hospitalNameTv" />

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/signOutBtn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hospitalNameTv"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/editBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="70dp"
        android:text="@string/fragment_profile_signOut_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>