<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp">

    <TextView
        style="@style/TitleTextStyle"
        android:id="@+id/descTv"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toTopOf="@id/iconIv"
        android:gravity="center"
        android:text="@string/fragment_profile_title"/>

    <ImageView
        android:id="@+id/iconIv"
        android:layout_width="70dp"
        android:layout_height="70dp"
        app:layout_constraintTop_toBottomOf="@id/descTv"
        app:layout_constraintBottom_toTopOf="@id/firstNameEt"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:tint="@color/iconGreen"
        android:src="@drawable/ic_profile_details"/>


    <EditText
        style="@style/TextStyle"
        android:id="@+id/firstNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iconIv"
        app:layout_constraintBottom_toTopOf="@id/lastNameEt"
        android:singleLine="true"
        android:text="@string/layout_first_name"/>


    <EditText
        style="@style/TextStyle"
        android:id="@+id/lastNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstNameEt"
        app:layout_constraintBottom_toTopOf="@id/hospitalNameEt"
        android:singleLine="true"
        android:text="@string/layout_last_name"/>


    <EditText
        style="@style/TextStyle"
        android:id="@+id/hospitalNameEt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/lastNameEt"
        app:layout_constraintBottom_toBottomOf="@id/cancelBtn"
        android:singleLine="true"
        android:text="@string/fragment_profile_hospital_name"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/cancelBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hospitalNameEt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/confirmBtn"
        android:text="@string/fragment_profile_edit_cancel_btn"/>

    <Button
        style="@style/ButtonStyle"
        android:id="@+id/confirmBtn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/hospitalNameEt"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@id/cancelBtn"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="40dp"
        android:layout_marginBottom="40dp"
        android:layout_marginStart="140dp"
        android:text="@string/fragment_profile_edit_btn"/>

</androidx.constraintlayout.widget.ConstraintLayout>