<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="184dp"
    android:layout_height="160dp"
    android:layout_margin="16dp"
    android:background="@color/patientCardBackground">

    <de.hdodenhof.circleimageview.CircleImageView
        android:id="@+id/patientPictureIv"
        android:layout_width="60dp"
        android:layout_height="60dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="@id/dischargedLabelTv"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_marginStart="16dp"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/firstNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toTopOf="@id/patientPictureIv"
        app:layout_constraintStart_toEndOf="@id/patientPictureIv"
        android:layout_marginStart="16dp"
        android:text="@string/layout_first_name"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/lastNameTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/firstNameTv"
        app:layout_constraintBottom_toBottomOf="@id/patientPictureIv"
        app:layout_constraintStart_toEndOf="@id/patientPictureIv"
        android:layout_marginTop="16dp"
        android:layout_marginStart="16dp"
        android:text="@string/layout_last_name"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/dischargedLabelTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/patientPictureIv"
        app:layout_constraintStart_toStartOf="@id/patientPictureIv"
        app:layout_constraintBottom_toBottomOf="parent"
        android:text="@string/layout_discharged_label"/>

    <TextView
        style="@style/TextStyle"
        android:id="@+id/dischargedDateTv"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toEndOf="@id/dischargedLabelTv"
        app:layout_constraintTop_toBottomOf="@+id/patientPictureIv"
        android:layout_marginStart="4dp"
        android:text="@string/layout_discharged_date"/>

</androidx.constraintlayout.widget.ConstraintLayout>